Fixed essays' spacing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1027,7 +1027,9 @@ h6 {
 /* MOBILE > ESSAYS  */
 
 #essays li {
-	width: 43vw;
+	width: 48%;
+	margin-right: 4%;
+	margin-bottom: 2%;
 	min-width: 0;
 /*	box-shadow: 0px 4px 0px 0px rgba(0,0,0,0.05);
 */}
